# -ura-ai

./: .analisis.sh  .backups_manifest.json  .coverage  .dockerignore  .env.example  .env.secrets.template  .eslintrc.json  .gitignore  .openclaw_tracking.json  .pre-commit-config.yaml  .pylintrc  .semgrep.yml  .snyk  .windsurfrules  AGENTS.md  AGENTS.md.v0.30.0  AUDITORIA.md  CHANGELOG.md  CHANGELOG_v1.0.0-rc.md  CONTRIBUTING.md  Dockerfile  HOOKS_STATUS.md  INFORME_CAMBIOS_2026-05-05.md  INFORME_CRITICIDAD_REAL.md  INSTRUCTIVO_ENTRENAMIENTO_N3.md  MACHINES.md  Makefile  PLAN_MAESTRO.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  REGLAS_MODIFICACION_CODIGO.md  REGLA_DOCSTRING.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.31.0.md  RELEASE_NOTES_v0.32.0.md  RELEASE_NOTES_v0.33.0.md  SECURITY_EXCEPTIONS.md  SSD_MIGRATION_NOTE.txt  STOP_LEER_PRIMERO.md  (+105 more)
.claude/: settings.local.json
.git.corrompido.backup.20260530/: COMMIT_EDITMSG  ORIG_HEAD  config  index  opencode  packed-refs
.github/: dependabot.yml
.nervioso/: estado_mantenimiento.json
.windsurf/: keybindings.json  mcp-config.json  settings.json  snippets.json
TOOLS/: analytics_dashboard.py  elastic_orchestrator.py  ethical_guard.py  knowledge_auditor.py  mochila_engine.py  openclaw_api.py  prompt_injector.py  reglas.yaml
agents/: CONTEXTO.md  __init__.py  actualizador_lista_blanca.py  agent_message_bus.py  agente_air.py  agente_aps.py  agente_auditor.py  agente_backup.py  agente_biblioteca.py  agente_cocina_italiana.py  agente_cocina_mexicana.py  agente_cocina_peruana.py  agente_conciencia.py  agente_conectividad.py  agente_consultor_marketing.py  agente_critico.py  agente_critico_opencode.py  agente_deteccion_patrones.py  agente_escritura_segura.py  agente_formularios.py  agente_gobierno.py  agente_gui.py  agente_instalador.py  agente_instalador_opencode.py  agente_investigador_ia.py  agente_lectura.py  agente_lenguaje.py  agente_lenguaje_escribiente.py  agente_lenguaje_tecnico.py  agente_logger.py  agente_marketing_auto.py  agente_media_recetas.py  agente_memoria.py  agente_modelos.py  agente_movimiento.py  agente_musica.py  agente_opencode.py  agente_orquestador_documentacion.py  agente_orquestador_recetas.py  agente_policia_v2.py  (+66 more)
api/: auto_repair_api.py  graphql.py  health_api.py  main.py  openapi.yaml  registry_api.py  ura_dashboard.py  websocket_handler.py
app/: capturador.py  flujo_constante.py  gestor_archivos.py  main.py  motor_flujo.py
audit_reports/: registro_penalizaciones.txt
benchmarks/: CONSENSUS_LOG.md  EVOLUTION_LOG.md  FAILURE_CONSCIOUSNESS_LOG.md  FINAL_INTEGRATION_REPORT.md  FINAL_MASTER_REPORT.md  LEARNING_LOG.md  SECURITY_PATCH.md  STRESS_TEST_125.py  STRESS_TEST_125_FINAL.md  STRESS_TEST_125_REPORT.md  STRESS_TEST_75_REPORT.md  STRESS_TEST_80_REPORT.md  URA_DASHBOARD_METRICS.md  URA_OPERATIONAL_TEST_REPORT.md  benchmark_advanced.py  benchmark_exhaustive.py  benchmark_resilience.py  integration_test_final.py  integration_test_results.json  master_integration_suite.py  master_test_results.json  master_test_suite.py  performance_history.json  pre_commit_hook.py  profile_performance.py  test_anti_bypass.py  test_hybrid_routing.py  test_personality_cleanup.py  test_technical_director.py  test_workflow_stability.py
bitacora/: 2026-06-15.md  2026-06-16.md  2026-06-17.md  PLAN_MEJORA.md  _reporte_completo.json  _template.md  requisitos_mac.md
cli/: __init__.py  gatekeeper.py  generar_codewiki.py
cloud/: Dockerfile.cloud  deploy.sh  setup.sh
cocina/: buzo_teoria_culinaria.sh  orquestar.sh
config/: .env.gpg  auto_repair_config.json  baseline.json  conectividad_estado.json  dahua_cameras.json  department_profiles.json  deployment_recipes.json  dispositivos.json  estado_infraestructura.md  estrategias_8_targets.json  fallback_roles.json  frigate.yml  frigate_camaras_ejemplo.yml  go2rtc.gx10.yaml  gx10.json  infra_config.json  laia.json  learning_config.json  legal_rules.json  loader.py  maintenance.json  maleta.json  mock_tpv.plist  model_catalog.json  n8n_cloud_backup_workflow.json  n8n_disk_check_workflow.json  n8n_disk_clean_workflow.json  n8n_health_report_workflow.json  n8n_network_audit_workflow.json  n8n_ollama_health_workflow.json  n8n_ram_check_workflow.json  n8n_thread_cleaner_workflow.json  network_inventory.json  network_topology.md  port_registry.json  pyqual_pro.yaml  reglas_builtin.json  schema.json  seeds_manuales.txt  settings.json  (+11 more)
configs/: ia_committee_config.json
connectors/: opencode_connector.py
core/: CONTEXTO.md  LOG_ACTIVIDAD_URA.md  URA_OPERATIONS.json  __init__.py  action_executor.py  action_signer.py  agent_interface.py  agent_metadata.py  agent_validator.py  agente_administrativo_contable.py  agente_archivist.py  agente_arquitectura.py  agente_asesor.py  agente_banco.py  agente_camaras.py  agente_cocina_espanola.py  agente_cocina_navarra_temporada.py  agente_conciencia.py  agente_contabilidad.py  agente_conversacion.py  agente_documentador.py  agente_email.py  agente_facturas.py  agente_gastronomo_musica.py  agente_gobierno.py  agente_juridico.py  agente_laboral.py  agente_librarian.py  agente_maestro.py  agente_marketing.py  agente_marketing_temporada_navarra.py  agente_memoria.py  agente_notificaciones.py  agente_opencode.py  agente_operativo_hardware.py  agente_policia_v2.py  agente_rrhh.py  agente_scheduler.py  agente_tailscale.py  agente_video.py  (+330 more)
dashboard/: dashboard_node.py  max_research.py  metrics_dashboard.html  multi_agent_research.py  multi_chair.py  search_analyzer.py  web_vision.py
data/: openclaw_stats.json  payment_audit.jsonl  pending_payments.jsonl
deploy/: Dockerfile  Dockerfile.mochila  SYNC_WORKFLOW.md  assistant.env.example  auto_pull.sh  backup_to_mac.sh  bootstrap_recovery.sh  build_sandboxes.sh  claw_listener.sh  clean_session_cache.sh  cloudflare_worker.js  com.ura.model_router.plist  com.ura.opencode-watchdog.plist  com.ura.snc-remote.plist  com.ura.tailscale-watchdog.plist  com.ura.watcher.plist  deploy_router_improvements.sh  deploy_tuneladora.sh  diagnostico.json  docker-compose.yml  emergency_runbook.json  git-auth.sh  (+46 more)
(+2818 files in other folders)
