[project]
name = "ura"
version = "2.1.0"
description = "URA - Ultimate Research Agent: multi-agent desktop assistant with consciousness, self-improvement, and autonomous swarm"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ura = "ura:main"
ura-snc = "monitor.snc:main"
ura-openclaw = "monitor.openclaw:main"
ura-router = "core.model_router:main"
ura-ejecutor = "scripts.pro.ejecutor_api:main"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",     # Type annotations (legacy codebase, requeriria rewrite)
    "D",       # Docstrings (requeriria generacion bulk con IA)
    "BLE001",  # Blind except (intencional en codigo de red)
    "ARG",     # Unused arguments (callback APIs legacy)
    "G004",    # Logging f-strings (cosmetico, no bug)
    "PLR2004", # Magic values (cosmetico)
    "PLR0913", # Too many arguments (API legacy)
    "E402",    # Module import not at top (circular imports)
    "PLC0415", # Import outside top-level (circular imports)
    "E741",    # Ambiguous variable name (cosmetico)
    "ERA",     # Commented-out code (legacy)
    "N",       # Naming conventions (cosmetico)
    "PT",      # pytest rules (solo aplican a tests)
    "TRY",     # try/except style (cosmetico)
    "EM",      # Exception message style (cosmetico)
    "PIE",     # Pie-style rules (cosmetico)
    "RET",     # Return style (cosmetico)
    "T20",     # Print statements (intencional en scripts)
    "COM",     # Trailing commas (cosmetico, --fix lo maneja)
    "Q",       # Quote style (cosmetico, --fix lo maneja)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D", "ANN", "ARG"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests", "motor/tests"]
python_files = ["test_*.py"]
norecursedirs = [".hypothesis", ".git", ".venv", "venv", "__pycache__", "audit_reports"]
filterwarnings = ["ignore::DeprecationWarning"]
timeout = 60
asyncio_mode = "auto"
addopts = "-q --cov=core --cov=monitor --cov=motor --cov-report=term --cov-report=xml"

[tool.coverage.run]
source = ["core", "monitor", "motor"]
omit = ["*/tests/*", "*/.venv/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 1
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["pytest", "semgrep", "mutmut", "httpx", "tqdm", "zmq"]
ignore_missing_imports = true

[tool.mutmut]
paths = ["core", "monitor", "motor"]
backup = false
runner = "python3 -m pytest tests/ -x -q"
dict_sync = false
