[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ura*", "motor*", "core*", "monitor*", "knowledge*", "scripts*"]
exclude = ["tests*", "motor/tests*"]

[project]
name = "ura"
version = "0.29.0"
description = "URA — Multi-agent desktop assistant with retrieval, memory, and multi-agent runtime"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Ramon Esnaola"},
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.25",
    "requests>=2.31",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "openai>=1.0",
    "anthropic>=0.30",
    "qdrant-client>=1.9",
    "rank-bm25>=0.2",
    "python-dotenv>=1.0",
    "prometheus-client>=0.19",
    "blake3>=0.3",
    "pydantic-core>=2.0",
    "pyzmq>=25.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24",
    "pillow>=10.0",
    "transformers>=4.35",
    "scipy>=1.10",
    "safetensors>=0.4",
]
llm = [
    "tiktoken>=0.5",
    "tokenizers>=0.15",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "pygments>=2.15",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-timeout",
    "pytest-cov>=4.0",
    "hypothesis>=6.80",
    "ruff>=0.15",
    "mypy>=1.8",
    "bandit>=1.7",
    "coverage>=7.0",
    "pre-commit>=3.0",
    "build>=1.0",
    "twine>=5.0",
    "safety>=3.0",
]

[project.scripts]
ura = "ura:main"

[project.urls]
Homepage = "https://github.com/ramon-kaixo/-ura-ai"
Repository = "https://github.com/ramon-kaixo/-ura-ai"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",     # Type annotations (legacy codebase, requeriria rewrite)
    "D",       # Docstrings (requeriria generacion bulk con IA)
    "BLE001",  # Blind except (intencional en codigo de red)
    "ARG",     # Unused arguments (callback APIs legacy)
    "G004",    # Logging f-strings (cosmetico, no bug)
    "PLR2004", # Magic values (cosmetico)
    "PLR0913", # Too many arguments (API legacy)
    "E402",    # Module import not at top (circular imports)
    "PLC0415", # Import outside top-level (circular imports)
    "FBT",     # Boolean positional args (estilo, no bug)
    "PLW0108", # Lambda unnecessary (estilo, no bug)
    "E741",    # Ambiguous variable name (cosmetico)
    "ERA",     # Commented-out code (legacy)
    "N",       # Naming conventions (cosmetico)
    "PT",      # pytest rules (solo aplican a tests)
    "TRY",     # try/except style (cosmetico)
    "EM",      # Exception message style (cosmetico)
    "PIE",     # Pie-style rules (cosmetico)
    "RET",     # Return style (cosmetico)
    "T20",     # Print statements (intencional en scripts)
    "COM",     # Trailing commas (cosmetico, --fix lo maneja)
    "Q",       # Quote style (cosmetico, --fix lo maneja)
    "S603",    # subprocess-without-shell-equals-true (todos usan list args, seguros)
    "S607",    # start-process-with-partial-path (git/docker/date desde PATH, intencional)
    "ASYNC210", # blocking-http-call-in-async-function (legacy codebase)
    "C901",    # complex-structure (legacy, refactor pendiente)
    "PLR0912", # too-many-branches (legacy)
    "PLR0911", # too-many-return-statements (legacy)
    "S112",    # try-except-continue (degradacion controlada)
    "SLF001",  # private-member-access (tests)
    "E501",    # line-too-long (cosmetico, 120 col limite)
    "S108",    # hardcoded-temp-file (whitelist de directorios, intencional)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D", "ANN", "ARG", "SLF001"]
"motor/tests/*" = ["S101", "D", "ANN", "ARG", "SLF001", "B007"]
"tests/contracts/*" = ["S101", "D", "ANN", "ARG", "SLF001", "B007", "PGH003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests", "motor/tests"]
python_files = ["test_*.py"]
norecursedirs = [".hypothesis", ".git", ".venv", "venv", "__pycache__", "audit_reports"]
filterwarnings = ["ignore::DeprecationWarning"]
timeout = 60
asyncio_mode = "auto"
markers = [
    "slow: tests that take more than 30s or marked as long-running",
    "integration: tests requiring external services (Ollama, Qdrant, Docker, etc.)",
    "e2e: end-to-end tests involving multiple components",
    "benchmark: performance or benchmark tests",
    "experimental: deprecated, frozen, or unstable tests",
]
addopts = "-q --cov=core --cov=monitor --cov=motor --cov-report=term --cov-report=xml"

[tool.coverage.run]
source = ["motor"]
omit = ["*/tests/*", "*/.venv/*", "*/__pycache__/*", "*/motor/tests/*"]

[tool.coverage.report]
fail_under = 20
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["pytest", "semgrep", "mutmut", "httpx", "tqdm", "zmq"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "__pycache__", ".sandbox_packages", "build", ".nervioso"]
skips = ["B101", "B311", "B403", "B404", "B603", "B607"]

[tool.mutmut]
paths = ["core", "monitor", "motor"]
backup = false
runner = "python3 -m pytest tests/ -x -q"
dict_sync = false
